# markdown-edit-llm-benchmark

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
fixtures/complex/: audit_security.changes.md  audit_security.final.md  audit_security.initial.md  collateral_hedging.changes.md  collateral_hedging.final.md  collateral_hedging.initial.md  contract_maturity.changes.md  contract_maturity.final.md  contract_maturity.initial.md
fixtures/hard/: usde_research.changes.md  usde_research.final.md  usde_research.initial.md  very_long.changes.md  very_long.final.md  very_long.initial.md
fixtures/medium/: project_plan.changes.md  project_plan.final.md  project_plan.initial.md  research_paper.changes.md  research_paper.final.md  research_paper.initial.md
fixtures/simple/: api_reference.changes.md  api_reference.final.md  api_reference.initial.md  basic_report.changes.md  basic_report.final.md  basic_report.initial.md  meeting_notes.changes.md  meeting_notes.final.md  meeting_notes.initial.md  project_plan.changes.md  project_plan.final.md  project_plan.initial.md
md_edit_bench/: __init__.py  config.py  llm.py  models.py  runner.py  scoring.py
md_edit_bench/algorithms/: __init__.py  aider_diff_fenced.py  aider_diff_fenced_v2.py  aider_editblock.py  aider_patch.py  aider_udiff.py  aider_utils.py  base.py  codex_patch.py  full_rewrite.py  git_diff.py  json_ops.py  morph.py  search_replace.py  section_rewrite.py  str_replace_editor.py  udiff_tagged.py
md_edit_bench/algorithms/aider_diff_fenced/: __init__.py  aider_diff_fenced.py  format_spec.jinja2  retry.jinja2  system.jinja2  user.jinja2
md_edit_bench/algorithms/aider_editblock/: __init__.py  aider_editblock.py  format_spec.jinja2  retry.jinja2  system.jinja2  user.jinja2
md_edit_bench/algorithms/aider_patch/: __init__.py  aider_patch.py  format_spec.jinja2  retry.jinja2  system.jinja2  user.jinja2
md_edit_bench/algorithms/aider_udiff/: __init__.py  aider_udiff.py  format_spec.jinja2  retry.jinja2  system.jinja2  user.jinja2
md_edit_bench/algorithms/codex_patch/: __init__.py  codex_patch.py  format_spec.jinja2  retry.jinja2  system.jinja2  user.jinja2
md_edit_bench/algorithms/full_rewrite/: __init__.py  full_rewrite.py  system.jinja2  user.jinja2
md_edit_bench/algorithms/git_diff/: __init__.py  format_spec.jinja2  git_diff.py  retry.jinja2  system.jinja2  user.jinja2
md_edit_bench/algorithms/json_ops/: __init__.py  format_spec.jinja2  json_ops.py  retry.jinja2  system.jinja2  user.jinja2
md_edit_bench/algorithms/morph/: __init__.py  format_spec.jinja2  morph.py  system.jinja2  user.jinja2
md_edit_bench/algorithms/partial_rewrite/: __init__.py  partial_rewrite.py  retry.jinja2  system.jinja2  user.jinja2
md_edit_bench/algorithms/search_replace/: __init__.py  format_spec.jinja2  retry.jinja2  search_replace.py  system.jinja2  user.jinja2
md_edit_bench/algorithms/section_rewrite/: __init__.py  format_spec.jinja2  retry.jinja2  section_rewrite.py  system.jinja2  user.jinja2
md_edit_bench/algorithms/str_replace_editor/: __init__.py  format_spec.jinja2  retry.jinja2  str_replace_editor.py  system.jinja2  user.jinja2
md_edit_bench/algorithms/udiff_tagged/: __init__.py  format_spec.jinja2  retry.jinja2  system.jinja2  udiff_tagged.py  user.jinja2
md_edit_bench/utils/: __init__.py  prompt_manager.py
scripts/: list_all_files.sh
tests/: test_partial_rewrite.py
